# Meta-Agent-System-for-Solution-Architecture-Design

./: .gitignore  ANALISE_INTEGRACAO_MASS.md  COMPARACAO_OFICIAL_APOSENTADORIA.md  CONFIGURACAO.md  LICENSE  README.md  RELATORIO_GERACAO_CODIGO.md  RELATORIO_TESTE_REAL.md  RESULTADO_TESTE_APOSENTADORIA.md  ROADMAP_MASS_V2.md  TESTE_EFICACIA_SISTEMA.md  prd.md  pyproject.toml  todo.md
mass_das/: __init__.py  agent.py  prompts.py  tools.py
mass_das/sub_agents/: __init__.py  analista.py  arquiteto.py  compilador.py  definidor_ferramentas.py  especialista_prompts.py  gerador_codigo.py  otimizador.py
output/: ARQUITETURA_SENTIMENTOS_SOCIAIS.md  TESTE_INTEGRACAO_COMPLETA.md
